--- a/package.json
+++ b/package.json
@@ -9,8 +9,9 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "@hugeicons/react": "^1.0.5",
         "@types/node": "20.10.6",
-        "@types/react": "18.2.46",
+        "@types/react": "19.1.9",
         "@types/react-dom": "18.2.6",
         "autoprefixer": "10.4.14",
         "class-variance-authority": "^0.6.1",
@@ -18,13 +19,13 @@
         "eslint": "8.44.0",
         "eslint-config-next": "13.4.9",
         "lucide-react": "^0.259.0",
-        "next": "13.4.9",
+        "next": "^13.5.11",
         "postcss": "8.4.25",
         "react": "18.2.0",
         "react-dom": "18.2.0",
         "react-hook-form": "^7.45.1",
         "react-hot-toast": "^2.4.1",
-        "resend": "^0.17.1",
+        "resend": "^4.7.0",
         "tailwind-merge": "^1.13.2",
         "tailwindcss": "3.3.2",
         "typescript": "5.3.3",
